# focusable

./: .markdownlint-cli2.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  bacon.toml  cliff.toml
focusable/: CHANGELOG.md  Cargo.toml
focusable-derive/: CHANGELOG.md  Cargo.toml
focusable-derive/src/: focus.rs  focus_container.rs  lib.rs
focusable/examples/demo/: button.rs  container.rs  label.rs  main.rs  text_box.rs
focusable/examples/ratatui/: form.rs  label.rs  main.rs  terminal.rs  text_box.rs
focusable/src/: focus.rs  focus_container.rs  lib.rs
focusable/tests/: main.rs
