[workspace]
resolver = "2"
members = ["focusable", "focusable-derive"]

[workspace.package]
version = "0.2.8"
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/focusable"
repository = "https://github.com/joshka/focusable"
readme = "README.md"

[workspace.dependencies]
focusable-derive = { version = "0.2.8", path = "focusable-derive" }
