[package]
name = "focusable-derive"
description = "Derive macro for the focusable crate"

version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.42"
syn = "2.0.111"
proc-macro2 = "1.0.103"
tracing = { version = "0.1.43", optional = true }
