[package]
name = "focusable"
description = "A trait for types that can be focused"

version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = ["derive"]
derive = ["dep:focusable-derive"]

[dependencies]
focusable-derive = { workspace = true, optional = true }
tracing = "0.1.41"

[dev-dependencies]
color-eyre = "0.6.3"
itertools = "0.14.0"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
